fix: limit checkbox selection overlap

--- a/src/app/shared/components/config-form-control/config-form-control.component.scss
+++ b/src/app/shared/components/config-form-control/config-form-control.component.scss
@@ -258,6 +258,15 @@ mat-option {
   }
 }
 
+.checkbox-form-control {
+  .checkbox {
+    ::ng-deep .mat-mdc-checkbox-touch-target {
+      height: 24px;
+      width: 24px;
+    }
+  }
+}
+
 ::-webkit-scrollbar {
   width: 3px !important;
   background-color: #f5f5f5;
